HelloUltraviolet/Fixtures/RejectedSource/Statements/BreakOutsideLoop/Source/Main.uv
//! Rejected statement specimen for break outside loop context.

public procedure breakOutsideLoopReference() -> i32 {
    break
    return 0
}
